--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
     <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Стили -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <title>Студия</title>
 </head>
 <body>  
     <header class = "header">
-        <div class="container hedder-container" >
-            <nav class = "navigation">
+        <div class="hedder-container container" >
                 <!-- Логотип -->
-                <a class = "logo" href=""><span>Web</span>Studio</a>
-                <ul  class = "navigation-links">
-                    <li class = "item">
-                        <a class = "link is-active" href="">Студия</a>
+                <a class = "logo" href=""><span class="logo__span">Web</span>Studio</a>
+            <nav class = "navigation">
+                <ul  class = "navigation__list">
+                    <li class = "navigation__item">
+                        <a class = "navigation__link is-active" href="">Студия</a>
                     </li>
-                    <li class = "item">
-                        <a class = "link" href="./portfolio.html">Портфолио</a>
+                    <li class = "navigation___item">
+                        <a class = "navigation__link" href="./portfolio.html">Портфолио</a>
                     </li>
-                    <li class = "item">
-                        <a class = "link" href="">Контакты</a>
+                    <li class = "navigation__item">
+                        <a class = "navigation__link" href="">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <!-- контакты -->
             <ul class = "header-contacts">
-                <li class = "item">
-                    <a class = "link" href="mailto:info@devstudio.com">
-                            <svg class="icon-envelope" width="16" height="12">
+                <li class = "header-contacts__item">
+                    <a class = "header-contacts__link" href="mailto:info@devstudio.com">
+                            <svg class="header-contacts__icon" width="16" height="12">
                                 <use href="./images/icons.svg#icon-envelope"></use>
                             </svg>                    
                         info@devstudio.com
                     </a>                
                 </li>
-                <li class = "item">
-                    <a class = "link" href="tel:+380961111111">
-                        <svg class="icon-envelope" width="10px" height="16px">
+                <li class = "header-contacts__item">
+                    <a class = "header-contacts__link" href="tel:+380961111111">
+                        <svg class="header-contacts__icon" width="10px" height="16px">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
