herro and peculiarities

--- a/index.html
+++ b/index.html
@@ -55,53 +55,53 @@
     </header>
     <main>
         <!-- Шапка -->
-        <section class = "title">
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button" data-modal-open>Заказать услугу</button>
+        <section class = "herro">
+                <h1 class="herro__title">Эффективные решения для вашего бизнеса</h1>
+                <button class = "herro__button" type="button" data-modal-open>Заказать услугу</button>
         </section>
         <!-- особенности -->
-        <section class = "peculiarities-section section">
+        <section class = "peculiarities section">
             <div class="container">
                 <h2 class = "visually-hidden">Наши превосходства</h2>
-                <ul class = "peculiarities-list">
-                    <li class = "item">
-                        <div class="peculiarities-container">
+                <ul class = "peculiarities__list">
+                    <li class = "peculiarities__item">
+                        <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
                                 <use href = "images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="peculiarities-title">Внимание к деталям</h3>
-                        <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        <h3 class="peculiarities__title">Внимание к деталям</h3>
+                        <p class="peculiarities__text">Идейные соображения, а также начало повседневной работы по формированию позиции.
                         </p>
                     </li>
-                    <li class = "item">
-                        <div class="peculiarities-container">
+                    <li class = "peculiarities__item">
+                        <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
                                 <use href = "images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="peculiarities-title">Пунктуальность</h3>
-                        <p class="peculiarities-text">Задача организации, в особенности же рамки и место обучения кадров влечет за
+                        <h3 class="peculiarities__title">Пунктуальность</h3>
+                        <p class="peculiarities__text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
-                    <li class = "item">
-                        <div class="peculiarities-container">
+                    <li class = "peculiarities__item">
+                        <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
                                 <use href = "images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="peculiarities-title">Планирование</h3>
-                        <p class="peculiarities-text">Равным образом консультация с широким активом в значительной степени
+                        <h3 class="peculiarities__title">Планирование</h3>
+                        <p class="peculiarities__text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li class = "item">
-                        <div class="peculiarities-container">
+                    <li class = "peculiarities__item">
+                        <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
                                 <use href = "images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="peculiarities-title">Современные технологии</h3>
-                        <p class="peculiarities-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                        <h3 class="peculiarities__title">Современные технологии</h3>
+                        <p class="peculiarities__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
