--- a/index.html
+++ b/index.html
@@ -107,31 +107,31 @@
             </div>
         </section>
         <!-- Чем мы занимаемся -->
-        <section class = "works-section section">
+        <section class = "works section">
             <div class="container">
-                <h2 class="works-title">Чем мы занимаемся</h2>
-                <ul class = "works-list">
-                    <li class = "item">
-                        <div class="thumb">
+                <h2 class="works__title">Чем мы занимаемся</h2>
+                <ul class = "works__list">
+                    <li class = "works__item">
+                        <div class="works__img-thumb">
                             <img src="images/studio/box_1.jpg" alt="Руки на клавиатуре" width="370">
-                            <div class="overlay">
-                                <p class="works-list-text">Десктопные приложения</p>
+                            <div class="works__overlay">
+                                <p class="works__text">Десктопные приложения</p>
                             </div>
                         </div>
                     </li>
-                    <li class = "item">
-                        <div class="thumb">
+                    <li class = "works__item">
+                        <div class="works__img-thumb">
                             <img src="images/studio/box_2.jpg" alt="Моделрование для смартфона" width="370">
-                            <div class="overlay">
-                                <p class="works-list-text">Мобильные приложения</p>
+                            <div class="works__overlay">
+                                <p class="works__text">Мобильные приложения</p>
                             </div>
                         </div>
                     </li>
-                    <li class = "item">
-                        <div class="thumb">
+                    <li class = "works__item">
+                        <div class="works__img-thumb">
                             <img src="images/studio/box_3.jpg" alt="Цветовая палитра" width="370">
-                            <div class="overlay">
-                                <p class="works-list-text">Дизайнерские решения</p>
+                            <div class="works__overlay">
+                                <p class="works__text">Дизайнерские решения</p>
                             </div>
                         </div>
                     </li>
