--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     </li>
                     <li class = "works__item">
                         <div class="works__img-thumb">
-                            <img src="images/studio/box_3.jpg" alt="Цветовая палитра" width="370">
+                            <img src="./images/studio/box_3.jpg" alt="Цветовая палитра" width="370">
                             <div class="works__overlay">
                                 <p class="works__text">Дизайнерские решения</p>
                             </div>
@@ -139,152 +139,152 @@
             </div>        
         </section>
         <!-- Наша команда -->
-        <section class = "team-section section">
+        <section class = "team section">
             <div class="container">
-                <h2 class="team-title">Наша команда</h2>
+                <h2 class="team__title">Наша команда</h2>
                 <ul class="team-list">
-                    <li class="item">
-                        <img src="images/studio/img1.jpg" alt="Фото человека" width="270">
-                        <div class="team-container">
-                            <h3 class="card-title">Игорь Демьяненко</h3>
-                            <p class="card-text" lang="en">Product Designer</p>
-                            <ul class = "team-links">
-                                <li class = "team-links-item">
-                                    <a href="" class = "team-link">
-                                        <svg class = "team-icon" width = "20" height = "20">
-                                            <use href = "images/icons.svg#icon-instagram"></use>
+                    <li class="team-list__item">
+                        <img src="./images/studio/img1.jpg" alt="Фото человека" width="270">
+                        <div class="team-card">
+                            <h3 class="team-card__title">Игорь Демьяненко</h3>
+                            <p class="team-card__text" lang="en">Product Designer</p>
+                            <ul class = "sotial-links">
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width = "20" height = "20">
+                                            <use href = "./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class = "team-links-item">
-                                    <a href="" class = "team-link">
-                                        <svg class = "team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-twitter"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class = "team-links-item">
-                                    <a href="" class = "team-link">
-                                        <svg class = "team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-facebook"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class = "team-links-item">
-                                    <a href="" class = "team-link">
-                                        <svg class = "team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div>                        
                     </li>
-                    <li class="item">
-                        <img src="images/studio/img2.jpg" alt="Фото человека" width="270">
-                        <div class="team-container">
-                            <h3 class="card-title">Ольга Репина</h3>
-                            <p class="card-text" lang="en">Frontend Developer</p>
-                            <ul class="team-links">
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-instagram"></use>
+                    <li class="team-list__item">
+                        <img src="./images/studio/img2.jpg" alt="Фото человека" width="270">
+                        <div class="team-card">
+                            <h3 class="team-card__title">Ольга Репина</h3>
+                            <p class="team-card__text" lang="en">Frontend Developer</p>
+                            <ul class = "sotial-links">
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width = "20" height = "20">
+                                            <use href = "./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-twitter"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-facebook"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div>                       
                     </li>
-                    <li class="item">
+                    <li class="team-list__item">
                         <img src="images/studio/img3.jpg" alt="Фото человека" width="270">
-                        <div class="team-container">
-                            <h3 class="card-title">Николай Тарасов</h3>
-                            <p class="card-text" lang="en">Marketing</p>
-                            <ul class="team-links">
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-instagram"></use>
+                        <div class="team-card">
+                            <h3 class="team-card__title">Николай Тарасов</h3>
+                            <p class="team-card__text" lang="en">Marketing</p>
+                            <ul class = "sotial-links">
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width = "20" height = "20">
+                                            <use href = "./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-twitter"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-facebook"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
                             </ul>
                         </div>                        
                     </li>
-                    <li class="item">
+                    <li class="team-list__item">
                         <img src="images/studio/img4.jpg" alt="Фото человека" width="270">
-                        <div class="team-container">
-                            <h3 class="card-title">Михаил Ермаков</h3>
-                            <p class="card-text" lang="en">UI Designer</p>
-                            <ul class="team-links">
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-instagram"></use>
+                        <div class="team-card">
+                            <h3 class="team-card__title">Михаил Ермаков</h3>
+                            <p class="team-card__text" lang="en">UI Designer</p>
+                            <ul class = "sotial-links">
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width = "20" height = "20">
+                                            <use href = "./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-twitter"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-facebook"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-links-item">
-                                    <a href="" class="team-link">
-                                        <svg class="team-icon" width="20" height="20">
-                                            <use href="images/icons.svg#icon-linkedin"></use>
+                                <li class = "sotial-links__item">
+                                    <a href="" class = "sotial-links__link">
+                                        <svg class = "sotial-links__icon" width="20" height="20">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
