--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li class = "peculiarities__item">
                         <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
-                                <use href = "images/icons.svg#icon-antenna"></use>
+                                <use href = "./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__title">Внимание к деталям</h3>
@@ -77,7 +77,7 @@
                     <li class = "peculiarities__item">
                         <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
-                                <use href = "images/icons.svg#icon-clock"></use>
+                                <use href = "./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__title">Пунктуальность</h3>
@@ -87,7 +87,7 @@
                     <li class = "peculiarities__item">
                         <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
-                                <use href = "images/icons.svg#icon-diagram"></use>
+                                <use href = "./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__title">Планирование</h3>
@@ -97,7 +97,7 @@
                     <li class = "peculiarities__item">
                         <div class="peculiarities__icon-container">
                             <svg width = "70" height = "70">
-                                <use href = "images/icons.svg#icon-astronaut"></use>
+                                <use href = "./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__title">Современные технологии</h3>
@@ -113,7 +113,7 @@
                 <ul class = "works__list">
                     <li class = "works__item">
                         <div class="works__img-thumb">
-                            <img src="images/studio/box_1.jpg" alt="Руки на клавиатуре" width="370">
+                            <img src="./images/studio/box_1.jpg" alt="Руки на клавиатуре" width="370">
                             <div class="works__overlay">
                                 <p class="works__text">Десктопные приложения</p>
                             </div>
@@ -121,7 +121,7 @@
                     </li>
                     <li class = "works__item">
                         <div class="works__img-thumb">
-                            <img src="images/studio/box_2.jpg" alt="Моделрование для смартфона" width="370">
+                            <img src="./images/studio/box_2.jpg" alt="Моделрование для смартфона" width="370">
                             <div class="works__overlay">
                                 <p class="works__text">Мобильные приложения</p>
                             </div>
@@ -218,7 +218,7 @@
                         </div>                       
                     </li>
                     <li class="team-list__item">
-                        <img src="images/studio/img3.jpg" alt="Фото человека" width="270">
+                        <img src="./images/studio/img3.jpg" alt="Фото человека" width="270">
                         <div class="team-card">
                             <h3 class="team-card__title">Николай Тарасов</h3>
                             <p class="team-card__text" lang="en">Marketing</p>
@@ -255,7 +255,7 @@
                         </div>                        
                     </li>
                     <li class="team-list__item">
-                        <img src="images/studio/img4.jpg" alt="Фото человека" width="270">
+                        <img src="./images/studio/img4.jpg" alt="Фото человека" width="270">
                         <div class="team-card">
                             <h3 class="team-card__title">Михаил Ермаков</h3>
                             <p class="team-card__text" lang="en">UI Designer</p>
@@ -295,49 +295,49 @@
             </div>    
         </section>
         <!-- Клиенты -->
-        <section class = "section">
+        <section class = "clients section">
             <div class="container">
-                <h2 class = "clients-title">Постоянные клиенты</h2>
-                <ul class = "clients-icon-list">
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
-                            <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo1"></use>
+                <h2 class = "clients__title">Постоянные клиенты</h2>
+                <ul class = "clients__list">
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
+                            <svg class = "clients__icon" width = "106" height = "60">
+                                <use href = "./images/icons.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
-                            <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo2"></use>
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
+                            <svg class = "clients__icon" width = "106" height = "60">
+                                <use href = "./images/icons.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
                             <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo3"></use>
+                                <use href = "./images/icons.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
-                            <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo4"></use>
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
+                            <svg class = "clients__icon" width = "106" height = "60">
+                                <use href = "./images/icons.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
-                            <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo5"></use>
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
+                            <svg class = "clients__icon" width = "106" height = "60">
+                                <use href = "./images/icons.svg#icon-logo5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class = "item">
-                        <a href="" class = "clients-icon-link">
-                            <svg width = "106" height = "60">
-                                <use href = "images/icons.svg#icon-logo6"></use>
+                    <li class = "clients__item">
+                        <a href="" class = "clients__link">
+                            <svg class = "clients__icon" width = "106" height = "60">
+                                <use href = "./images/icons.svg#icon-logo6"></use>
                             </svg>
                         </a>
                     </li>
@@ -370,28 +370,28 @@
                     <li class="item">
                         <a href="" class="footer-icon-link">
                             <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="footer-icon-link">
                             <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="footer-icon-link">
                             <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="item">
                         <a href="" class="footer-icon-link">
                             <svg class="footer-icon" width="20" height="20">
-                                <use href="images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -405,7 +405,7 @@
                         Подписаться
                         <span>
                             <svg class="footer-icon" width="24" height="24">
-                                <use href="images/icons.svg#icon-send"></use>
+                                <use href="./images/icons.svg#icon-send"></use>
                             </svg>
                         </span>
                     </button>
@@ -420,7 +420,7 @@
         <div class="modal-window">
             <button class="modal-close-button" data-modal-close>
                 <svg width="18" height="18">
-                    <use href="images/icons.svg#icon-crost"></use>
+                    <use href="./images/icons.svg#icon-crost"></use>
                 </svg>
             </button>
             <p class = "modal-window-head">Оставьте свои данные, мы вам перезвоним</p>
@@ -429,21 +429,21 @@
                     <input type="text" id = "name-input" name = "reqest-name" required>
                     <label for="name-input">Имя</label>
                     <svg width="18" height="18">
-                        <use href="images/icons.svg#icon-person"></use>
+                        <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                 </div>
                 <div class = "input-container">
                     <input type="tel" id = "phone-input" name="reqest-phone" required>
                     <label for="phone-input">Телефон</label>
                     <svg width="18" height="18">
-                        <use href="images/icons.svg#icon-phone"></use>
+                        <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                 </div>
                 <div class = "input-container">
                     <input type="email" id = "mail-input" name = "reqest-email" required>
                     <label for="mail-input">Почта</label>
                     <svg width="18" height="18">
-                        <use href="images/icons.svg#icon-email"></use>
+                        <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                 </div>
                 <div class = "input-container comment">
@@ -455,10 +455,10 @@
                     <label for="mailing-check">
                         <div class="custom-checkbox">
                             <svg width = "16" height = "15" class = "checkbox-na">
-                                <use href="images/icons.svg#icon-checkbox-na"></use>
+                                <use href="./images/icons.svg#icon-checkbox-na"></use>
                             </svg>
                             <svg width = "16" height = "15" class = "checkbox-a">
-                                <use href="images/icons.svg#icon-checkbox"></use>
+                                <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </div>
                         <p>
