--- a/index.html
+++ b/index.html
@@ -348,57 +348,57 @@
     <footer class = "footer">
         <!-- Логотип -->   
         <div class="container">
-            <div class = "address-box">
-                <a class="logo" href=""><span>Web</span>Studio</a>
+            <div class = "address-container">
+                <a class="logo footer-logo" href=""><span class="logo__span">Web</span>Studio</a>
                 <address class="address">
-                    <ul class = "address-list">
-                        <li class = "item">
-                            <p class="address-text">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class = "address__list">
+                        <li class = "address__item">
+                            <p class="address__text">г. Киев, пр-т Леси Украинки, 26</p>
                         </li>
-                        <li class = "item">
-                            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <li class = "address__item">
+                            <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
-                        <li class = "item">
-                            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                        <li class = "address__item">
+                            <a class="address__link" href="tel:+380961111111">+38 096 111 11 11</a>
                         </li>
                     </ul>
                 </address>
             </div>
             <div class = "icons-box">
-                <p class = "footer-icons-title">присоединяйтесь</p>
-                <ul class="footer-icons-list">
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
+                <p class = "footer__text">присоединяйтесь</p>
+                <ul class="sotial-links">
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="item">
-                        <a href="" class="footer-icon-link">
-                            <svg class="footer-icon" width="20" height="20">
+                    <li class="sotial-links__item">
+                        <a href="" class="sotial-links__link footer-sotial-links__link">
+                            <svg class="sotial-links__icon footer-sotial-links__icon" width="20" height="20">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
             </div>
-            <form action="" name = "mail-subscription" class = "form-mail-subscription">
-                <label for = "subscription-email" class = "footer-icons-title">Подпишитесь на рассылку</label>
+            <form action="" name = "mail-subscription" class = "subscription">
+                <label for = "subscription-email" class = "footer__text">Подпишитесь на рассылку</label>
                 <div class = "subscription-container">
                     <input type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
                     <button type = "submit" class = "form-submit-button">
