--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
             <nav class = "navigation">
                 <ul  class = "navigation__list">
                     <li class = "navigation__item">
-                        <a class = "navigation__link" href="/index.html">Студия</a>
+                        <a class = "navigation__link" href="./index.html">Студия</a>
                     </li>
                     <li class = "navigation___item">
                         <a class = "navigation__link is-active" href="./portfolio.html">Портфолио</a>
