--- a/portfolio.html
+++ b/portfolio.html
@@ -259,7 +259,7 @@
                     </li>
                 </ul>
             </div>
-            <form action="" name = "mail-subscription" class = "subscription">
+            <form name = "mail-subscription" class = "subscription">
                 <label for = "subscription-email" class = "footer__text">Подпишитесь на рассылку</label>
                 <div class = "subscription__container">
                     <input class = "subscription__input" type="email" name = "subscription-email" id="subscription-email" placeholder="E-mail">
